* Version 1.2.0 (unreleased)
 ** yhsm-validation-server: Support OATH TOTP.
 ** yhsm-init-oath-token: Handle keys with length != 20.
 ** Moved utils, yubikey-ksm and validation-server to be included when installing using pip.
 ** Use entry_point scripts generated by setuptools.
 ** Moved man pages to man/ directory.
 ** Bugfix: Fix AEAD generation on Windows by writing in binary mode.
 ** Bugfix: Support AEADs generated on Windows using pyhsm <= 1.1.1.
 ** Bugfix: Avoid installing unit test package.
 ** Bugfix: yhsm-import-keys: Fix --aes-key argument used when importing without a YubiHSM.

* Version 1.1.1 (released 2016-01-08)
 ** Fixup release.

* Version 1.1.0 (released 2016-01-08)
 ** Restructured the repository and build process.
 ** Use Semantic Versioning (semver.org).
 ** Added support for a "soft" HSM in yhsm-yubikey-ksm, yhsm-import-keys
    and yhsm-generate-keys.

* Version 1.0.4l (released 2015-08-24)
 ** Documentation is now in asciidoc format.
 ** yhsm-yubikey-ksm: Fix bug when the same public ID occured for multiple
    keyhandles.

* Version 1.0.4k (released 2014-09-18)
 ** yhsm-db-import, yhsm-db-export: Fix syntax error.

* Version 1.0.4j (released 2014-09-16)
 ** yhsm-yubikey-ksm: Fix syntax error.

* Version 1.0.4i (released 2014-09-16)
 ** yhsm-yubikey-ksm: Add --daemon.
 ** yhsm-yubikey-ksm: Add --db-url to specify SQL database path to AEAD store.
 ** yhsm-db-import, yhsm-db-export: New tools to do database import/export.
 ** Documentation cleanup.

* Version 1.0.4h (released 2014-01-09)
 ** yhsm-daemon: Use JSON messages instead of Python pickling.
    (as suggested by Rogdham)

* Version 1.0.4g (released 2013-05-06)
 ** yhsm-daemon: Support listening to non-loopback interfaces.
 ** yhsm-daemon: Forward exceptions to the client.
 ** yhsm-daemon: Handle device unavailable, and attempt to recover.

* Version 1.0.4f (released 2013-04-12)
 ** Fix failing test.
 ** Support URLs in device field, for more info see: