@@ -1,13 +1,17 @@
 * Version 1.2.0 (unreleased)
  ** yhsm-validation-server: Support OATH TOTP.
  ** yhsm-init-oath-token: Handle keys with length != 20.
- ** Moved utils, yubikey-ksm and validation-server to be included when installing using pip.
+ ** yhsm-yubikey-ksm: Allow passing soft-HSM keys via stdin by passing "-" as
+    device argument.
+ ** Moved utils, yubikey-ksm and validation-server to be included when
+    installing using pip.
  ** Use entry_point scripts generated by setuptools.
  ** Moved man pages to man/ directory.
  ** Bugfix: Fix AEAD generation on Windows by writing in binary mode.
  ** Bugfix: Support AEADs generated on Windows using pyhsm <= 1.1.1.
  ** Bugfix: Avoid installing unit test package.
- ** Bugfix: yhsm-import-keys: Fix --aes-key argument used when importing without a YubiHSM.
+ ** Bugfix: yhsm-import-keys: Fix --aes-key argument used when importing
+    without a YubiHSM.
 
 * Version 1.1.1 (released 2016-01-08)
  ** Fixup release.
